# MAGMA

./: CMakeLists.txt
src/: main.c
